Fix textAlign start/end when combined with icon and disclosure

--- a/polaris-react/src/components/Button/Button.module.scss
+++ b/polaris-react/src/components/Button/Button.module.scss
@@ -347,6 +347,10 @@
   justify-content: space-between;
 }
 
+.iconWithTextAndDisclosure .Children {
+  flex-grow: 1;
+}
+
 // LOADING
 .loading {
   color: transparent;
